# odcrawler-discovery

./: .gitignore  Cargo.toml  LICENSE
shared/: Cargo.toml
shared/src/: db.rs  lib.rs
src/: check_links.rs  db.rs  elastic.rs  main.rs  meili.rs  scans.rs  stats.rs
web/: Cargo.toml
web/src/: main.rs
web/templates/: index.tera  links.tera  ods.tera
