[package]
name = "odcrawler-discovery"
version = "0.1.0"
authors = ["MCOfficer <mcofficer@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
shrust = "0.0.7"
simplelog = "0.8"
log = "0.4"
structopt = "0.3"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
meilisearch-sdk = { git = "https://github.com/MCOfficer/meilisearch-rust.git", branch = "surf" }
flate2 = "1.0"
wither = { version = "0.9.0-alpha.2", features = ["async-std-runtime"], default_features = false }
async-std = "1.6"
async-trait = "0.1"
isahc = "0.9.10"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
