[package]
name = "odcrawler-discovery"
version = "0.1.0"
authors = ["MCOfficer <mcofficer@gmx.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = "1.6"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
futures = "0.3"
isahc = "0.9.11"
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shrust = "0.0.7"
simplelog = "0.8"
structopt = "0.3"
wither = { version = "0.9.0-alpha.2", features = ["async-std-runtime"], default_features = false }
zip = "0.5"
