[package]
name = "odcrawler-discovery"
version = "0.1.0"
authors = ["MCOfficer <mcofficer@gmx.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = "1.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
futures = "0.3"
indicatif = "0.15"
isahc = "0.9.12"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shrust = "0.0.7"
simplelog = "0.9"
structopt = "0.3"
subprocess = "0.2"
wither = { version = "0.9.0-alpha.2", features = ["async-std-runtime"], default_features = false }
