[package]
name = "web"
version = "0.1.0"
authors = ["MCOfficer <mcofficer@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mprober-lib = "0.1.4"
rocket = { git="https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git="https://github.com/SergioBenitez/Rocket.git", default_features=false, features=["tera_templates", "json"] }
serde = "1.0"
shared = { path="../shared" }
